Added summarize releases
